part2/2.09.Project_dailyToDos/ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: todos-ns
  labels:
    name: todos-ns
