part2/2.09.Project_dailyToDos/be-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-be
  namespace: todos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-be
  template:
    metadata:
      labels:
        app: todos-be
    spec:
      containers:
        - name: todos-be
          image: k3d-myregistry.localhost:12345/todos-be
