part2/2.09.Project_dailyToDos/fe_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-fe
  namespace: todos-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-fe
  template:
    metadata:
      labels:
        app: todos-fe
    spec:
      containers:
        - name: todos-fe
          image: k3d-myregistry.localhost:12345/todos-fe
