part2/2.09.Project_dailyToDos/be-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todos-be-svc
  namespace: todos-ns
spec:
  type: ClusterIP
  selector:
    app: todos-be
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
