part2/2.09.Project_dailyToDos/fe_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todos-fe-svc
  namespace: todos-ns
spec:
  type: ClusterIP
  selector:
    app: todos-fe
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
