part2/2.09.Project_dailyToDos/pg-ss-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pg-ss-svc
  namespace: todos-ns
spec:
  clusterIP: None
  selector:
    app: pg-ss
  ports:
  - name: pg-ss-svc-port
    protocol: TCP
    port: 5432
    targetPort: 5432
